UNRELEASED
==========

* Fix a UnicodeEncodeError in version output, thanks to David Prévot.
  Closes: #650746
* Updated translations:
  - Sinhala, thanks to Danishka Navin <danishka@gmail.com>.


Isoquery 1.5
============
14 June 2011

* If the locale does not exist for the given ISO standard, print a warning
  message and use the untranslated (thus English) strings. Closes: #624147
* Review isoquery manpage, thanks to David Prévot. Closes: #627577
* New manpage translation:
  - French, thanks to David Prévot. Closes: #628841
* Update test suite to pass with current iso-codes (3.26)
* Updated translations:
  - German, thanks to Tobias Quathamer.
  - Portuguese, thanks to Américo Monteiro.
  - Swedish, thanks to Martin Bagge. Closes: #628863
  - Russian, thanks to Yuri Kozlov. Closes: #628966
  - Czech, thanks to Michal Simunek. Closes: #629112
  - French, thanks to Christian Perrier. Closes: #629164
  - Danish, thanks to Joe Hansen. Closes: #630246


Isoquery 1.4
============
2 October 2010

* New translation:
  - Vietnamese, thanks to Clytie Siddall. Closes: #598618


Isoquery 1.3
============
15 August 2010

* New translation:
  - Portuguese, thanks to Américo Monteiro. Closes: #592431
* New manpage translation:
  - Portuguese, thanks to Américo Monteiro. Closes: #592433


Isoquery 1.2
============
31 July 2010

* Fix invalid syntax for Python 2.4. Thanks to Cristian Ionescu-Idbohrn
  for the bug report and patch. Closes: #591035


Isoquery 1.1
============
28 July 2010

* Fix errors in manpages with overlong lines
* Rewrite generation of manpages with waf build system
* French translation update, thanks to Christian Perrier. Closes: #589554
* New translations:
  - Russian, thanks to Yuri Kozlov. Closes: #589521
  - Swedish, thanks to Martin Bagge / brother <brother@bsnet.se>
  - Czech, thanks to Michal Šimůnek. Closes: #589719
  - Danish, thanks to Joe Hansen. Closes: #589861
  - Sinhala, thanks to Danishka Navin.