@@ -1,0 +1,5 @@
+include AUTHORS ChangeLog COPYING TODO
+include man/*
+include po/isoquery.pot
+include po/*po
+include test/*py
