@@ -1,0 +1,2 @@
+[sdist]
+formats = bztar
